--- a/src/pages/consultoria.astro
+++ b/src/pages/consultoria.astro
@@ -27,7 +27,7 @@ const CONSULTORIA = {
       },
       {
         title: "Backend",
-        description: "APIs robustas y mantenibles con Express, Fastify, NestJS o Bun. Monolitos, micro-servicios, CQRS, DDD, etc.",
+        description: "APIs robustas y mantenibles con Express, Fastify, NestJS o Bun. Monolitos, micro-servicios, CQRS y DDD.",
       },
     ],
     cta: {
@@ -63,7 +63,7 @@ const CONSULTORIA = {
       },
       {
         title: "Migraciones",
-        description: "Actualiza tus desarrollos a las últimas versiones de tus frameworks y lenguajes.",
+        description: "Actualiza tus desarrollos a las últimas versiones de tus frameworks y lenguajes para ganar rendimiento y seguridad.",
       },
     ]
   },
