--- a/src/pages/formacion.astro
+++ b/src/pages/formacion.astro
@@ -26,7 +26,7 @@ const FORMACION = {
       },
       {
         title: "Advanced",
-        description: "Escala tus desarrollos con librerías, micro-servicios y gestión avanzada de estado.",
+        description: "Escala tus desarrollos con librerías, micro front-ends y gestión avanzada de estado.",
       },
     ]
   },
@@ -44,13 +44,13 @@ const FORMACION = {
       },
       {
         title: "Playwright",
-        description: "Versatilidad, velocidad e integración con IA",
+        description: "Versatilidad, velocidad e integración con IA.",
       },
     ]
   },
   aidd: {
     title: "Desarrollo con IA",
-    subtitle: "Cursor, Claude, Gemini, GitHub Copilot, Cline... Todos son bienvenidos.",
+    subtitle: "Cursor, Claude, Gemini, Copilot, Cline... Todos son bienvenidos.",
     cards: [
       {
         title: "AIDD",
@@ -76,7 +76,7 @@ const FORMACION = {
       },
       {
         title: "Arquitectura de software",
-        description: "Des de las capas de un monolito modular, hasta un sistema distribuido con micro-frontend y CQRS.",
+        description: "Desde las capas de un monolito modular, hasta un sistema distribuido con micro servicios y CQRS.",
       },
     ]
   },
