--- a/src/pages/formacion.astro
+++ b/src/pages/formacion.astro
@@ -6,11 +6,11 @@ import Section from "../components/Section.astro";
 const FORMACION = {
   layout: {
     title: "Formación",
-    description: "La industria del software evoluciona como nunca; pero no es magIA, es tecnología.",
+    description: "La industria del software evoluciona y tu también; no es magIA, es tecnología.",
   },
   hero: {
     title: "Formación",
-    subtitle: "La industria del software evoluciona como nunca; pero no es magIA, es tecnología.",
+    subtitle: "La industria del software evoluciona y tu también; no es magIA, es tecnología.",
     cta: {
       text: "Learn to code smarter",
       link: "",
@@ -22,11 +22,11 @@ const FORMACION = {
     cards: [
       {
         title: "Basic",
-        description: "Fundamentos del framework más usado por bancos, administraciones y multinacionales.",
+        description: "Fundamentos del framework más usado por bancos, administraciones y multinacionales. (Angular clásico o moderno con señales y sin módulos)",
       },
       {
         title: "Advanced",
-        description: "Escala tus desarrollos con librerías, micro front-ends y gestión avanzada de estado.",
+        description: "Escala tus desarrollos con librerías, micro front-ends y gestión avanzada de estado. Agrega testing, CI/CD y más.",
       },
     ]
   },
@@ -35,7 +35,7 @@ const FORMACION = {
     subtitle: "Aprende a probar tu código para ganar tranquilidad.",
     cards: [
       {
-        title: "Jest",
+        title: "Jest o Vitest",
         description: "Pruebas unitarias de Node, Angular y cualquier variante de JavaScript.",
       },
       {
