--- a/src/pages/consultoria.astro
+++ b/src/pages/consultoria.astro
@@ -19,7 +19,7 @@ const CONSULTORIA = {
   },
   services: {
     title: "¿En qué te puedo ayudar?",
-    subtitle: "La industria del software evoluciona como nunca; pero no es magIA, es tecnología.",
+    subtitle: "Ofrezco servicios como freelance para empresas y departamentos de desarrollo.",
     cards: [
       {
         title: "Arquitectura",
