--- a/src/layouts/Footer.astro
+++ b/src/layouts/Footer.astro
@@ -1,7 +1,14 @@
 ---
 import PrimaryComment from "@components/PrimaryComment.astro";
+import BlinkCursor from "../components/BlinkCursor.astro";
 
 const currentYear = new Date().getFullYear();
+
+const localLinks = [
+  { href: "/consultoria", text: "Consultoría" },
+  { href: "/formacion", text: "Formación" },
+  // { href: "/portfolio", text: "Portfolio" },
+];
 
 const links = [
   { href: "https://linkedin.com/in/albertobasalo", text: "LinkedIn" },
@@ -22,6 +29,10 @@ const legalLinks = [
     <section>
       <h3 class="logo"><a href="/">Alberto Basalo</a></h3>
       <h4><PrimaryComment />AI code quality.</h4>
+        {localLinks.map(link => (
+          <span><a href={link.href}>{link.text}</a><BlinkCursor /></span>
+        ))}
+      
     </section>
     <section>
       <h3>Connect</h3>
