--- a/src/pages/formacion.astro
+++ b/src/pages/formacion.astro
@@ -12,7 +12,7 @@ const FORMACION = {
     title: "Formación",
     subtitle: "La industria del software evoluciona y tu también; no es magIA, es tecnología.",
     cta: {
-      text: "Learn to code smarter",
+      text: "Learn to code Smarter",
       link: "",
     },
   },
@@ -116,7 +116,7 @@ const FORMACION = {
   },
   ediciones: {
     title: "Ediciones",
-    subtitle: "Todos los cursos se pueden bonificar por FUNDADE.",
+    subtitle: "Todos los cursos se pueden bonificar por FUNDAE.",
     cards: [
       {
         title: "En directo",
