--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -20,7 +20,7 @@ const { title, subtitle, cta } = hero;
       <h1 class="color"><MatrixText text={title} /></h1>
     </header>
     <main class="center">
-      <center>{subtitle}<BlinkCursor /></center>
+      <span>{subtitle}<BlinkCursor /></span>
     </main>
     {cta && (
       <footer class="center">
