--- a/src/components/Section.astro
+++ b/src/components/Section.astro
@@ -28,7 +28,7 @@ const id = section.title?.toLowerCase().replace(/ /g, "-").replace(/\./g, "-").r
 <section id={id} class="container">
   <header class="center">
     <h2 class="color">{section.title}</h2>
-    <center>{section.subtitle}</center>
+    <span>{section.subtitle}</span>
   </header>
   {section.cards && section.cards.length > 0 && (
     <main class="grid">
