--- a/src/layouts/Head.astro
+++ b/src/layouts/Head.astro
@@ -8,12 +8,13 @@ const { title, description } = Astro.props;
 const canonicalURL = new URL(Astro.url.pathname, Astro.site);
 const logo = "/logo_2.png";
 const fontAPI = "https://fonts.googleapis.com";
-const fontFamilies = "family=Fira+Mono&family=Major+Mono+Display&family=Tomorrow";
+const fontFamilies =
+	"family=Fira+Mono&family=Major+Mono+Display&family=Tomorrow";
 const fonts = `${fontAPI}/css2?${fontFamilies}&display=swap`;
 const motto = "AI code quality.";
 const twitterHandle = "@AlbertoBasalo";
 const siteName = "Alberto Basalo";
-const image = `https://albertobasalo.dev/site-og-image.png?${new Date().toISOString().split('T')[0]}`;
+const image = `https://albertobasalo.dev/site-og-image.png?${new Date().toISOString().split("T")[0]}`;
 ---
 
 <head lang="es" data-theme="dark">
