--- a/src/pages/portfolio.astro
+++ b/src/pages/portfolio.astro
@@ -2,28 +2,31 @@
 import Layout from "@layouts/Layout.astro";
 import Hero from "../components/Hero.astro";
 import Section from "../components/Section.astro";
+
 const PORTFOLIO = {
-  layout: {
-    title: "Portfolio",
-    description:
-      "Empresas y organizaciones a las que he ayudado a mejorar su código.",
-  },
-  hero: {
-    title: "Portfolio",
-    subtitle: "Empresas y organizaciones a las que he ayudado a mejorar su código.",
-    cta: {
-      text: "Enterprise code Quality",
-      link: "",
-    },
-  }, 
-  sesion: {
-    title: "¿Quieres ver cómo puedo ayudarte?",
-    subtitle: "Soy freelance y trabajo para empresas, departamentos de desarrollo, consultoras o academias del sector IT.",
-    cta: {
-      text: "Contacta conmigo en LinkedIn",
-      link: "https://www.linkedin.com/in/albertobasalo/",
-    },
-  } 
+	layout: {
+		title: "Portfolio",
+		description:
+			"Empresas y organizaciones a las que he ayudado a mejorar su código.",
+	},
+	hero: {
+		title: "Portfolio",
+		subtitle:
+			"Empresas y organizaciones a las que he ayudado a mejorar su código.",
+		cta: {
+			text: "Enterprise code Quality",
+			link: "",
+		},
+	},
+	sesion: {
+		title: "¿Quieres ver cómo puedo ayudarte?",
+		subtitle:
+			"Soy freelance y trabajo para empresas, departamentos de desarrollo, consultoras o academias del sector IT.",
+		cta: {
+			text: "Contacta conmigo en LinkedIn",
+			link: "https://www.linkedin.com/in/albertobasalo/",
+		},
+	},
 };
 ---
 
