--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,51 +1,51 @@
 /* Modern CSS Reset and Global Styles */
 
 :root {
-  --pico-font-family: "Fira Mono", Consolas, monospace;
-  --pico-font-family-emoji: "Major Mono Display", Consolas, monospace;
-  --pico-font-family-sans-serif: Tomorrow, Roboto, Helvetica, Arial, sans-serif;
-  --pico-font-family-monospace: "Fira Mono", Consolas, monospace;
-  --pico-border-radius: 0rem;
-  --pico-typography-spacing-vertical: 0.6rem;
+	--pico-font-family: "Fira Mono", Consolas, monospace;
+	--pico-font-family-emoji: "Major Mono Display", Consolas, monospace;
+	--pico-font-family-sans-serif: Tomorrow, Roboto, Helvetica, Arial, sans-serif;
+	--pico-font-family-monospace: "Fira Mono", Consolas, monospace;
+	--pico-border-radius: 0rem;
+	--pico-typography-spacing-vertical: 0.6rem;
 }
 
 body {
-  padding-top: 1%;
-  padding-bottom: 1%;
-  padding-left: 3%;
-  padding-right: 3%;
-  font-family: var(--pico-font-family);
+	padding-top: 1%;
+	padding-bottom: 1%;
+	padding-left: 3%;
+	padding-right: 3%;
+	font-family: var(--pico-font-family);
 }
 
 @media (min-width: 576px) {
-  body {
-    padding-left: 4%;
-    padding-right: 4%;
-  }
+	body {
+		padding-left: 4%;
+		padding-right: 4%;
+	}
 }
 @media (min-width: 768px) {
-  body {
-    padding-left: 5%;
-    padding-right: 5%;
-  }
+	body {
+		padding-left: 5%;
+		padding-right: 5%;
+	}
 }
 @media (min-width: 1024px) {
-  body {
-    padding-left: 8%;
-    padding-right: 8%;
-  }
+	body {
+		padding-left: 8%;
+		padding-right: 8%;
+	}
 }
 @media (min-width: 1280px) {
-  body {
-    padding-left: 10%;
-    padding-right: 10%;
-  }
+	body {
+		padding-left: 10%;
+		padding-right: 10%;
+	}
 }
 @media (min-width: 1536px) {
-  body {
-    padding-left: 15%;
-    padding-right: 15%;
-  }
+	body {
+		padding-left: 15%;
+		padding-right: 15%;
+	}
 }
 
 h1,
@@ -54,35 +54,36 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: var(--pico-font-family-sans-serif);
+	font-family: var(--pico-font-family-sans-serif);
 }
 
 h1 {
-  --pico-font-size: 2.5rem;
-  --pico-line-height: 1.5;
-  --pico-typography-spacing-top: 3.5rem;
-  margin-bottom: 1rem;
+	--pico-font-size: 2.5rem;
+	--pico-line-height: 1.5;
+	--pico-typography-spacing-top: 3.5rem;
+	margin-bottom: 1rem;
 }
 
 h2 {
-  --pico-font-size: 2rem;
-  --pico-line-height: 1.5;
-  --pico-typography-spacing-top: 3rem;
-  margin-bottom: 1rem;
+	--pico-font-size: 2rem;
+	--pico-line-height: 1.5;
+	--pico-typography-spacing-top: 3rem;
+	margin-bottom: 1rem;
 }
 
-article, section  {
-  padding: 4%;
+article,
+section {
+	padding: 4%;
 }
 
 header {
-  margin-bottom: 1rem;
+	margin-bottom: 1rem;
 }
 
 [data-theme="light"] .light {
-  display: none;
+	display: none;
 }
 
 [data-theme="dark"] .dark {
-  display: none;
+	display: none;
 }
