--- a/src/layouts/Header.astro
+++ b/src/layouts/Header.astro
@@ -1,13 +1,13 @@
 ---
 type NavItem = {
-  href: string;
-  text: string;
-  external?: boolean;
+	href: string;
+	text: string;
+	external?: boolean;
 };
 const navItems: NavItem[] = [
-  { href: '/consultoria', text: 'Consultoría' },
-  { href: '/formacion', text: 'Formación' },
-  { href: '/portfolio', text: 'Portfolio' },
+	{ href: "/consultoria", text: "Consultoría" },
+	{ href: "/formacion", text: "Formación" },
+	{ href: "/portfolio", text: "Portfolio" },
 ];
 ---
 
