--- a/src/pages/legal/[slug].astro
+++ b/src/pages/legal/[slug].astro
@@ -1,21 +1,21 @@
 ---
-import Layout, { type LayoutProps } from "@layouts/Layout.astro";
 import { getCollection, render } from "astro:content";
+import Layout, { type LayoutProps } from "@layouts/Layout.astro";
 
 export async function getStaticPaths() {
-  const posts = await getCollection("legal");
-  return posts.map((post) => ({
-    params: { slug: post.id.replace("es/", "") },
-    props: { entry: post },
-  }));
+	const posts = await getCollection("legal");
+	return posts.map((post) => ({
+		params: { slug: post.id.replace("es/", "") },
+		props: { entry: post },
+	}));
 }
 
 const { entry } = Astro.props;
 const { Content } = await render(entry);
 
 const layout: LayoutProps = {
-  title: entry.data.title,
-  description: entry.data.description
+	title: entry.data.title,
+	description: entry.data.description,
 };
 ---
 
