--- a/src/components/CookieConsent.astro
+++ b/src/components/CookieConsent.astro
@@ -1,10 +1,10 @@
----
----
-
 <aside id="cookie-consent">
   <p>
-    Usamos cookies para mejorar tu experiencia. Al continuar visitando este sitio aceptas nuestro uso de cookies.
-    <a href="/legal/cookies" aria-label="Read our cookie policy">Ver Política de Cookies</a>
+    Usamos cookies para mejorar tu experiencia. Al continuar visitando este
+    sitio aceptas nuestro uso de cookies.
+    <a href="/legal/cookies" aria-label="Read our cookie policy"
+      >Ver Política de Cookies</a
+    >
   </p>
   <button id="cookie-consent-accept" class="outline">Aceptar</button>
 </aside>
@@ -36,19 +36,23 @@
 </style>
 
 <script>
-  const cookieConsent = document.querySelector('#cookie-consent') as HTMLElement;
-  const acceptButton = document.querySelector('#cookie-consent-accept') as HTMLButtonElement;
+  const cookieConsent = document.querySelector(
+    "#cookie-consent",
+  ) as HTMLElement;
+  const acceptButton = document.querySelector(
+    "#cookie-consent-accept",
+  ) as HTMLButtonElement;
 
   if (cookieConsent && acceptButton) {
-    if (!localStorage.getItem('cookieConsent')) {
-      cookieConsent.style.display = 'flex';
+    if (!localStorage.getItem("cookieConsent")) {
+      cookieConsent.style.display = "flex";
     } else {
-      cookieConsent.style.display = 'none';
+      cookieConsent.style.display = "none";
     }
 
-    acceptButton.addEventListener('click', () => {
-      localStorage.setItem('cookieConsent', 'true');
-      cookieConsent.style.display = 'none';
+    acceptButton.addEventListener("click", () => {
+      localStorage.setItem("cookieConsent", "true");
+      cookieConsent.style.display = "none";
     });
   }
 </script>
