--- a/src/components/MatrixText.astro
+++ b/src/components/MatrixText.astro
@@ -1,6 +1,6 @@
 ---
 interface Props {
-	text: string;
+  text: string;
 }
 const { text } = Astro.props;
 ---
@@ -16,14 +16,14 @@ const { text } = Astro.props;
 
 <script>
   const letters = "ABCDEFGHIJKLMNOPQRSTUVWXYZ";
-  
-    document.querySelectorAll(".matrix-text").forEach((element) => {
+
+  document.querySelectorAll(".matrix-text").forEach((element) => {
     const el = element as HTMLElement;
     const text = el.getAttribute("data-value") || "";
     const speed = 30;
-    let interval: NodeJS.Timer | undefined = undefined;
+    let interval: NodeJS.Timeout | undefined = undefined;
     let iteration = 0;
-    
+
     const performIteration = () => {
       el.innerText = text
         .split("")
@@ -35,24 +35,16 @@ const { text } = Astro.props;
           return letters[randomIndex];
         })
         .join("");
-      
+
       if (iteration >= text.length) {
         if (interval) clearInterval(interval);
         return;
       }
-      
-      iteration += 1/3;
+
+      iteration += 1 / 3;
     };
 
     // Start animation on page load
     interval = setInterval(performIteration, speed);
-
-    // Restart animation on hover
-    /* el.addEventListener("mouseover", () => {
-      iteration = 0;
-      if (interval) clearInterval(interval);
-      interval = setInterval(performIteration, speed);
-    }); */
   });
-  
-</script> 
+</script>
