--- a/src/components/BlinkCursor.astro
+++ b/src/components/BlinkCursor.astro
@@ -1,4 +1,4 @@
-<span >|</span>
+<span>|</span>
 <style>
   span {
     color: var(--pico-secondary);
@@ -6,7 +6,12 @@
     animation: blink 2s step-end infinite;
   }
   @keyframes blink {
-    0%, 100% { opacity: 1; }
-    50% { opacity: 0; }
+    0%,
+    100% {
+      opacity: 1;
+    }
+    50% {
+      opacity: 0;
+    }
   }
 </style>
