--- a/src/layouts/Footer.astro
+++ b/src/layouts/Footer.astro
@@ -6,7 +6,7 @@ const currentYear = new Date().getFullYear();
 const localLinks = [
   { href: "/consultoria", text: "Consultoría" },
   { href: "/formacion", text: "Formación" },
-  // { href: "/portfolio", text: "Portfolio" },
+  { href: "/portfolio", text: "Portfolio" },
 ];
 
 const links = [
