--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -4,38 +4,37 @@ import MatrixText from "@components/MatrixText.astro";
 import type { Cta } from "./Section.astro";
 
 export type HeroProps = {
-	title: string;
-	subtitle: string;
-	cta?: Cta;
+  title: string;
+  subtitle: string;
+  cta?: Cta;
 };
 const { hero } = Astro.props as { hero: HeroProps };
 const { title, subtitle, cta } = hero;
---- 
+---
 
-<section
-    id="hero"
-    class="container">
-    <header class="center">
-      <h1 class="color"><MatrixText text={title} /></h1>
-    </header>
-    <main class="center">
-      <span>{subtitle}<BlinkCursor /></span>
-    </main>
-    {cta && (
+<section id="hero" class="container">
+  <header class="center">
+    <h1 class="color"><MatrixText text={title} /></h1>
+  </header>
+  <main class="center">
+    <span>{subtitle}<BlinkCursor /></span>
+  </main>
+  {
+    cta && (
       <footer class="center">
         {cta.link && (
-        <a role="button" class="outline"
-          href={cta.link}
-          target="_blank"
-          rel="noopener">
-        {cta.text}
-        </a>
+          <a
+            role="button"
+            class="outline"
+            href={cta.link}
+            target="_blank"
+            rel="noopener"
+          >
+            {cta.text}
+          </a>
         )}
-        {
-          !cta.link && (
-            <h2 class="center secondary">{cta.text}</h2>
-          )
-        }
+        {!cta.link && <h2 class="center primary">{cta.text}</h2>}
       </footer>
-    )}
-  </section>
+    )
+  }
+</section>
