--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,13 +4,11 @@ import { HOME } from "@content/home.content";
 import Layout from "@layouts/Layout.astro";
 import Hero from "../components/Hero.astro";
 ---
-<Layout
-  layout={HOME.layout}>
 
+<Layout layout={HOME.layout}>
   <Hero hero={HOME.hero} />
 
   <Section section={HOME.services} />
-  <Section section={HOME.technologies} />
   <Section section={HOME.aidd} />
-
+  <Section section={HOME.technologies} />
 </Layout>
