--- a/src/components/BlinkCursor.astro
+++ b/src/components/BlinkCursor.astro
@@ -1,7 +1,7 @@
 <span>|</span>
 <style>
   span {
-    color: var(--pico-secondary);
+    color: var(--pico-primary);
     font-weight: bolder;
     animation: blink 2s step-end infinite;
   }
