--- a/src/layouts/Footer.astro
+++ b/src/layouts/Footer.astro
@@ -26,7 +26,7 @@ const legalLinks = [
 <footer>
   <main class="grid">
     <section>
-      <h3 class="logo"><a href="/">Alberto Basalo</a></h3>
+      <h3 class="logo color"><a href="/">Alberto Basalo</a></h3>
       <h4><PrimaryComment />AI code quality.</h4>
       {
         localLinks.map((link) => (
