--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,4 +11,5 @@ import Hero from "../components/Hero.astro";
   <Section section={HOME.services} />
   <Section section={HOME.aidd} />
   <Section section={HOME.technologies} />
+  <Section section={HOME.us} />
 </Layout>
