--- a/src/components/Section.astro
+++ b/src/components/Section.astro
@@ -56,7 +56,7 @@ const id = section.title
         <a
           href={section.cta.link}
           role="button"
-          class="outline"
+          class="secondary"
           target="_blank"
         >
           {section.cta.text}
