--- a/src/pages/formacion.astro
+++ b/src/pages/formacion.astro
@@ -4,149 +4,153 @@ import Hero from "../components/Hero.astro";
 import Section from "../components/Section.astro";
 
 const FORMACION = {
-	layout: {
-		title: "Formación",
-		description:
-			"La industria del software evoluciona y tu también; no es magIA, es tecnología.",
-	},
-	hero: {
-		title: "Formación",
-		subtitle:
-			"La industria del software evoluciona y tu también; no es magIA, es tecnología.",
-		cta: {
-			text: "Learn to code Smarter",
-			link: "",
-		},
-	},
-	services: {
-		title: "¿En qué te puedo formar?",
-		subtitle:
-			"Ofrezco servicios como freelance para academias y consultoras del sector IT.",
-		cards: [
-			{
-				title: "Angular",
-				cta: {
-					text: "Fundamentos y avanzado",
-					link: "#angular",
-				},
-			},
-			{
-				title: "Testing",
-				cta: {
-					text: "Unit, E2E y TDD",
-					link: "#testing",
-				},
-			},
-			{
-				title: "AI-DD",
-				cta: {
-					text: "Desarrollo con IA",
-					link: "#desarrollo-con-ia",
-				},
-			},
-			{
-				title: "Clean Code",
-				cta: {
-					text: "Patrones y Arquitectura",
-					link: "#buenas-prácticas",
-				},
-			},
-		],
-	},
-	angular: {
-		title: "Angular",
-		subtitle:
-			"Aprende a desarrollar aplicaciones de categoría empresarial con Angular.",
-		cards: [
-			{
-				title: "Basic",
-				description:
-					"Fundamentos del framework más usado por bancos, administraciones y multinacionales. (Angular clásico o moderno con señales y sin módulos)",
-			},
-			{
-				title: "Advanced",
-				description:
-					"Escala tus desarrollos con librerías, micro front-ends y gestión avanzada de estado. Agrega testing, CI/CD y más.",
-			},
-		],
-	},
-	testing: {
-		title: "Testing",
-		subtitle: "Aprende a probar tu código para ganar tranquilidad.",
-		cards: [
-			{
-				title: "Jest o Vitest",
-				description:
-					"Pruebas unitarias de Node, Angular y cualquier variante de JavaScript.",
-			},
-			{
-				title: "Cypress",
-				description: "Pruebas fáciles y dev-friendly de aplicaciones web.",
-			},
-			{
-				title: "Playwright",
-				description: "Versatilidad, velocidad e integración con IA.",
-			},
-		],
-	},
-	aidd: {
-		title: "Desarrollo con IA",
-		subtitle:
-			"Cursor, Claude, Gemini, Copilot, Cline... Todos son bienvenidos.",
-		cards: [
-			{
-				title: "AIDD",
-				description:
-					"Aplica la metodología AI-Driven Development a todo el ciclo de desarrollo.",
-			},
-			{
-				title: "Agentes",
-				description:
-					"Desarrolla y usa agentes y servicios MCP para tu proyecto.",
-			},
-		],
-	},
-	clean: {
-		title: "Buenas prácticas",
-		subtitle: "Aprende a desarrollar un software más mantenible y escalable.",
-		cards: [
-			{
-				title: "Clean Code",
-				description:
-					"Los básicos para humanos y agentes: nombres, complejidad, convenios, funciones y clases. Y un poco de documentación y pruebas.",
-			},
-			{
-				title: "Patrones de diseño",
-				description:
-					"Evita code-smells aplicando patrones de diseño: estructurales, de comportamiento y de creación.",
-			},
-			{
-				title: "Arquitectura de software",
-				description:
-					"Desde las capas de un monolito modular, hasta un sistema distribuido con micro servicios y CQRS.",
-			},
-		],
-	},
-	ediciones: {
-		title: "Ediciones",
-		subtitle: "Todos los cursos se pueden bonificar por FUNDAE.",
-		cards: [
-			{
-				title: "En directo",
-				description:
-					"Escoge horarios y días para aprender en directo. Con un temario adaptado a tus necesidades.",
-			},
-			{
-				title: "En video",
-				description:
-					"Aprende a tu ritmo. Pero con mi ayuda en prácticas y chat de dudas.",
-			},
-		],
-		cta: {
-			text: "Contacta conmigo en LinkedIn",
-			link: "https://www.linkedin.com/in/albertobasalo/",
-		},
-	},
+  layout: {
+    title: "Formación",
+    description:
+      "La industria del software evoluciona y tu también; no es magIA, es tecnología.",
+  },
+  hero: {
+    title: "Formación",
+    subtitle:
+      "La industria del software evoluciona y tu también; no es magIA, es tecnología.",
+    cta: {
+      text: "Learn to code Smarter",
+      link: "",
+    },
+  },
+  services: {
+    title: "¿En qué te puedo formar?",
+    subtitle:
+      "Ofrezco servicios como freelance para academias y consultoras del sector IT.",
+    cards: [
+      {
+        title: "Angular",
+        cta: {
+          text: "Fundamentos y avanzado",
+          link: "#angular",
+        },
+      },
+      {
+        title: "Testing",
+        cta: {
+          text: "Unit, E2E y TDD",
+          link: "#testing",
+        },
+      },
+      {
+        title: "AI-DD",
+        cta: {
+          text: "Desarrollo con IA",
+          link: "#desarrollo-con-ia",
+        },
+      },
+      {
+        title: "Clean Code",
+        cta: {
+          text: "Patrones y Arquitectura",
+          link: "#buenas-prácticas",
+        },
+      },
+    ],
+  },
+  angular: {
+    title: "Angular",
+    subtitle:
+      "Aprende a desarrollar aplicaciones de categoría empresarial con Angular.",
+    cards: [
+      {
+        title: "Basic",
+        description:
+          "Fundamentos del framework más usado por bancos, administraciones y multinacionales. (Angular clásico o moderno con señales y sin módulos)",
+      },
+      {
+        title: "Advanced",
+        description:
+          "Escala tus desarrollos con librerías, micro front-ends y gestión avanzada de estado. Agrega testing, CI/CD y más.",
+      },
+    ],
+  },
+  testing: {
+    title: "Testing",
+    subtitle: "Aprende a probar tu código para ganar tranquilidad.",
+    cards: [
+      {
+        title: "Jest o Vitest",
+        description:
+          "Pruebas unitarias de Node, Angular y cualquier variante de JavaScript.",
+      },
+      {
+        title: "Cypress",
+        description: "Pruebas fáciles y dev-friendly de aplicaciones web.",
+      },
+      {
+        title: "Playwright",
+        description: "Versatilidad, velocidad e integración con IA.",
+      },
+    ],
+  },
+  aidd: {
+    title: "Desarrollo con IA",
+    subtitle:
+      "Cursor, Claude, Gemini, Copilot, Cline... Todos son bienvenidos.",
+    cards: [
+      {
+        title: "AIDD",
+        description:
+          "Aplica la metodología AI-Driven Development a todo el ciclo de desarrollo.",
+      },
+      {
+        title: "Agentes",
+        description:
+          "Desarrolla y usa agentes y servicios MCP para tu proyecto.",
+      },
+    ],
+    cta: {
+      text: "Más en AIcode Academy",
+      link: "https://aicode.academy/",
+    },
+  },
+  clean: {
+    title: "Buenas prácticas",
+    subtitle: "Aprende a desarrollar un software más mantenible y escalable.",
+    cards: [
+      {
+        title: "Clean Code",
+        description:
+          "Los básicos para humanos y agentes: nombres, complejidad, convenios, funciones y clases. Y un poco de documentación y pruebas.",
+      },
+      {
+        title: "Patrones de diseño",
+        description:
+          "Evita code-smells aplicando patrones de diseño: estructurales, de comportamiento y de creación.",
+      },
+      {
+        title: "Arquitectura de software",
+        description:
+          "Desde las capas de un monolito modular, hasta un sistema distribuido con micro servicios y CQRS.",
+      },
+    ],
+  },
+  ediciones: {
+    title: "Ediciones",
+    subtitle: "Todos los cursos se pueden bonificar por FUNDAE.",
+    cards: [
+      {
+        title: "En directo",
+        description:
+          "Escoge horarios y días para aprender en directo. Con un temario adaptado a tus necesidades.",
+      },
+      {
+        title: "En video",
+        description:
+          "Aprende a tu ritmo. Pero con mi ayuda en prácticas y chat de dudas.",
+      },
+    ],
+    cta: {
+      text: "Contacta conmigo en LinkedIn",
+      link: "https://www.linkedin.com/in/albertobasalo/",
+    },
+  },
 };
 ---
 
