--- a/src/styles/colors.css
+++ b/src/styles/colors.css
@@ -1,98 +1,86 @@
 :root {
-	--ab-light-green: #00ff00;
-	--ab-green: #00aa00;
-	--ab-dark-green: #007700;
-	--ab-light-blue: #00ffff;
-	--ab-blue: #00aaff;
-	--ab-dark-blue: #0077ff;
-	--ab-white: #fff;
-	--ab-yellow: #fafa00;
-	--ab-red: #ff0000;
-	--ab-light-gray: #dddddd;
-	--ab-gray: #777777;
-	--ab-dark-gray: #333333;
+  --ab-light-green: #00ff00;
+  --ab-green: #00aa00;
+  --ab-dark-green: #007700;
+  --ab-light-blue: #00ffff;
+  --ab-blue: #00aaff;
+  --ab-dark-blue: #0077ff;
+  --ab-white: #fff;
+  --ab-yellow: #fafa00;
+  --ab-red: #ff0000;
+  --ab-light-gray: #dddddd;
+  --ab-gray: #777777;
+  --ab-dark-gray: #333333;
 }
 
 /* dark theme */
 [data-theme="dark"] {
-	--pico-color: white;
-	--pico-background-color: black;
-	--pico-primary: var(--ab-blue);
-	--pico-primary-hover: var(--ab-blue);
-	--pico-primary-background: var(--ab-light-blue);
-	--pico-primary-hover-background: var(--ab-blue);
-	--pico-primary-inverse: black;
-	--pico-underline: var(--ab-light-blue);
-	--pico-primary-underline: var(--ab-light-blue);
-	--pico-secondary: var(--ab-light-green);
-	--pico-secondary-hover: var(--ab-green);
-	--pico-secondary-background: var(--ab-light-green);
-	--pico-secondary-hover-background: var(--ab-green);
-	--pico-box-shadow: 0 0 2px 0 var(--pico-secondary);
-	--ab-theme-gray: var(--ab-dark-gray);
-	--ab-gradient-primary: linear-gradient(
-		var(--ab-dark-blue),
-		var(--ab-light-blue)
-	);
-	--ab-gradient-secondary: linear-gradient(
-		var(--ab-dark-green),
-		var(--ab-light-green)
-	);
-	color-scheme: dark;
+  --pico-color: white;
+  --pico-background-color: black;
+  --pico-primary: var(--ab-blue);
+  --pico-primary-hover: var(--ab-blue);
+  --pico-primary-background: var(--ab-light-blue);
+  --pico-primary-hover-background: var(--ab-blue);
+  --pico-primary-inverse: black;
+  --pico-underline: var(--ab-light-blue);
+  --pico-primary-underline: var(--ab-light-blue);
+  --pico-secondary: var(--ab-light-green);
+  --pico-secondary-hover: var(--ab-green);
+  --pico-secondary-background: var(--ab-light-green);
+  --pico-secondary-hover-background: var(--ab-green);
+  --pico-box-shadow: 0 0 2px 0 var(--pico-primary);
+  --ab-theme-gray: var(--ab-dark-gray);
+  --ab-gradient-primary: linear-gradient(90deg, var(--ab-light-green), var(--ab-light-blue), var(--ab-blue));
+  --ab-gradient-secondary: linear-gradient(90deg, var(--ab-dark-green),
+      var(--ab-dark-blue), var(--ab-blue));
+  color-scheme: dark;
 }
 
 /* light theme */
 [data-theme="light"],
 :root:not([data-theme="dark"]) {
-	--pico-color: black;
-	--pico-background-color: white;
-	--pico-primary: var(--ab-blue);
-	--pico-primary-hover: var(--ab-blue);
-	--pico-primary-background: var(--ab-blue);
-	--pico-primary-hover-background: var(--ab-blue);
-	--pico-primary-inverse: white;
-	--pico-underline: var(--ab-blue);
-	--pico-primary-underline: var(--ab-blue);
-	--pico-secondary: var(--ab-light-green);
-	--pico-secondary-hover: var(--ab-green);
-	--pico-secondary-background: var(--ab-light-green);
-	--pico-secondary-hover-background: var(--ab-green);
-	--pico-box-shadow: 0 0 2px 0 var(--pico-secondary);
-	--ab-theme-gray: var(--ab-light-gray);
-	--ab-gradient-primary: linear-gradient(
-		var(--ab-dark-blue),
-		var(--ab-light-blue)
-	);
-	--ab-gradient-secondary: linear-gradient(
-		var(--ab-dark-green),
-		var(--ab-light-green)
-	);
-	color-scheme: light;
+  --pico-color: black;
+  --pico-background-color: white;
+  --pico-primary: var(--ab-blue);
+  --pico-primary-hover: var(--ab-light-blue);
+  --pico-primary-background: var(--ab-blue);
+  --pico-primary-hover-background: var(--ab-light-blue);
+  --pico-primary-inverse: white;
+  --pico-underline: var(--ab-blue);
+  --pico-primary-underline: var(--ab-blue);
+  --pico-secondary: var(--ab-light-green);
+  --pico-secondary-hover: var(--ab-green);
+  --pico-secondary-background: var(--ab-light-green);
+  --pico-secondary-hover-background: var(--ab-green);
+  --pico-box-shadow: 0 0 2px 0 var(--pico-primary);
+  --ab-theme-gray: var(--ab-light-gray);
+  --ab-gradient-primary: linear-gradient(90deg, var(--ab-dark-green),
+      var(--ab-dark-blue), var(--ab-blue));
+  --ab-gradient-secondary: linear-gradient(90deg, var(--ab-light-green),
+      var(--ab-light-green), var(--ab-blue));
+  color-scheme: light;
 }
 
 :root {
-	background-color: var(--pico-background-color);
+  background-color: var(--pico-background-color);
 }
 
 strong,
 em,
 i,
 b {
-	color: var(--pico-color);
+  color: var(--pico-color);
 }
 
 code {
-	color: var(--pico-color);
-	background-color: var(--ab-theme-gray);
+  color: var(--pico-color);
+  background-color: var(--ab-theme-gray);
+}
+
+a {
+  color: var(--pico-primary);
 }
 
 a:hover {
-	background: linear-gradient(
-		var(--pico-primary-background),
-		var(--pico-primary-underline)
-	);
-	-webkit-background-clip: text;
-	background-clip: text;
-	-webkit-text-fill-color: transparent;
-	font-weight: bold;
+  font-weight: bold;
 }
