--- a/src/pages/formacion.astro
+++ b/src/pages/formacion.astro
@@ -56,7 +56,7 @@ const FORMACION = {
   angular: {
     title: "Angular",
     subtitle:
-      "Aprende a desarrollar aplicaciones de categoría empresarial con Angular.",
+      "Domina Angular para desarrollar aplicaciones de categoría empresarial.",
     cards: [
       {
         title: "Basic",
@@ -91,28 +91,33 @@ const FORMACION = {
   },
   aidd: {
     title: "Desarrollo con IA",
-    subtitle:
-      "Cursor, Claude, Gemini, Copilot, Cline... Todos son bienvenidos.",
+    subtitle: "La IA no te quitará el trabajo, pero lo cambiará para siempre.",
     cards: [
       {
-        title: "AIDD",
+        title: "Metodología",
         description:
           "Aplica la metodología AI-Driven Development a todo el ciclo de desarrollo.",
       },
       {
+        title: "Editores",
+        description:
+          "Domina los AI powered IDEs más usados en el mercado: Copilot en Vscode, Cursor, ClaudeCode...",
+      },
+      {
         title: "Agentes",
         description:
-          "Desarrolla y usa agentes y servicios MCP para tu proyecto.",
+          "Desarrolla agentes y servicios MCP para tu proyecto, con LangChain, OpenRouter...",
       },
     ],
     cta: {
       text: "Más en AIcode Academy",
-      link: "https://aicode.academy/",
+      link: "https://aicode.academy/cursos/",
     },
   },
   clean: {
     title: "Buenas prácticas",
-    subtitle: "Aprende a desarrollar un software más mantenible y escalable.",
+    subtitle:
+      "Aprende a desarrollar un software más mantenible y escalable... en un mundo con IA",
     cards: [
       {
         title: "Clean Code",
