--- a/src/pages/formacion.astro
+++ b/src/pages/formacion.astro
@@ -21,7 +21,7 @@ const FORMACION = {
   services: {
     title: "¿En qué te puedo formar?",
     subtitle:
-      "Ofrezco servicios como freelance para academias y consultoras del sector IT.",
+      "Ofrezco servicios como freelance para academias y consultoras del sector TI.",
     cards: [
       {
         title: "Angular",
