--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,4 +12,22 @@ import Hero from "../components/Hero.astro";
   <Section section={HOME.aidd} />
   <Section section={HOME.technologies} />
   <Section section={HOME.us} />
+  <aside class="container colored-headers">
+    <header>
+      <h2>Una cosa más...</h2>
+    </header>
+    <p>
+      He desarrollado <kbd
+        ><a href="https://github.com/AIDDbot/AIDDbot" target="_blank">AIDDbot</a
+        ></kbd
+      >, un conjunto de herramientas (prompts, instrucciones, agentes, etc.)
+      para que puedas usar fácilmente toda la potencia de la IA en tu día a día.
+    </p>
+    <p>
+      Puedes verlas todas en <a
+        href="https://github.com/AIDDbot/"
+        target="_blank">AIDDbot en GitHub</a
+      >.
+    </p>
+  </aside>
 </Layout>
